# graph-mlgo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml  run.sh
paper/: report.bib  report.tex
src/cpp/: CMakeLists.txt  inliner.cpp  lib.cpp
src/dataset/: ComPile.py
src/env/opt/: README.md  form_blocks.py  lvn.py  tdce.py  util.py
src/graph_mlgo/: __init__.py  constants.py  ir.py
src/graph_mlgo/agent/: benchmark.py  config.py  evaluator.py  networks.py  train_loop.py  trainer.py  types.py  utils.py
src/graph_mlgo/agent/benchmark/: benchmark.py  plot.py
src/graph_mlgo/agent/training/: types.py
src/graph_mlgo/agent/training/ppo/: evaluator.py  train_loop.py  trainer.py
src/graph_mlgo/dataset/: ComPile.py  __init__.py  prepare.py
src/graph_mlgo/env/: LLVMInline.py
src/graph_mlgo/graph/: __init__.py  embedding.py  graph.py  inliner_test.py  node.py
src/graph_mlgo/graph/embedding/: __init__.py  aggregator.py  config.py  constants.py  embedding.py  networks.py  utils.py  utils_test.py
src/graph_mlgo/graph/embedding/training/: train_loop.py  trainer.py
