[project]
name = "graph-mlgo"
version = "0.1.0"
description = "GraphMLGO - Topology-aware Machine Learning Guided Compiler Optimizations Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "gymnasium>=1.3.0",
    "llvmlite>=0.47.0",
    "loguru>=0.7.3",
]
