[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "graph-mlgo"
version = "0.1.0"
description = "GraphMLGO - Topology-aware Machine Learning Guided Compiler Optimizations Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite", # needs to install version built by conda
    "datasets>=4.8.5",
    "gymnasium>=1.3.0",
    "loguru>=0.7.3",
    "numpy>=2.4.3",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "jax[cuda12]>=0.9.2",
    "flax>=0.12.6",
    "distrax>=0.1.8",
]

[tool.scikit-build]
cmake.source-dir = "src/cpp"
wheel.packages = ["src/graph_mlgo"]
